# DronePositioningSystem

./: .gitignore  README.md
gazebo/models/: generate_aruco_markers.py
gazebo/models/aruco_marker_id1_at_x4_y4/: model.config  model.sdf
gazebo/models/aruco_marker_id2_at_x4_y16/: model.config  model.sdf
gazebo/models/aruco_marker_id3_at_x26_y4/: model.config  model.sdf
gazebo/models/aruco_marker_id4_at_x13_y12/: model.config  model.sdf
gazebo/models/ground_lidar_sensor/: model.config  model.sdf
gazebo/worlds/: competition_map.sdf  competition_map_README.md  competition_map_coordinates.txt  generate_competition_map.py
ros2_ws/src/drone_localization/: package.xml  setup.py
ros2_ws/src/drone_localization/drone_localization/: flight_recorder.py  lidar_drone_tracker.py  plot_flight.py
ros2_ws/src/drone_localization/launch/: lidar_localization.launch.py
ros2_ws/src/drone_localization/params/: lidar_localization.yaml
ros2_ws/src/drone_mission/: package.xml  setup.py
ros2_ws/src/drone_mission/drone_mission/: competition_mission.py  generate_groundtruth_trajectory.py  ground_truth_path_publisher.py  groundtruth_trajectory.csv  waypoint_land.py
