<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_localization</name>
  <version>0.1.0</version>
  <description>LiDAR-based drone 3D localization for the competition (outside-in, ground-fixed LiDAR)</description>
  <maintainer email="jaeyup01@naver.com">jaeyup</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>

  <!-- Python dependencies installed via pip:
       pip3 install open3d scipy
       open3d: voxel downsampling, RANSAC plane, SOR, DBSCAN clustering
       scipy: Rotation for sensor→world transform -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
