<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_mission</name>
  <version>0.0.1</version>
  <description>PX4 offboard waypoint mission: takeoff to (0,0,2), forward 4m, land</description>
  <maintainer email="jaeyup01@naver.com">jaeyup</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
